Adicionado proteção de dados pessoais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=coimbradcrm-dev@hotmail.com
-default.recipient=coimbradcrm-dev@hotmail.com
+default.sender=${protected.email}
+default.recipient=${protected.email}
+
+spring.application.name=myapp
+spring.config.import=secrets/myapp.properties
