Protegido dados sensíveis.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,15 @@
-spring.datasource.url=mysql://b0ad0dc93d182b:4ab6034f@us-cdbr-east-05.cleardb.net/heroku_0965f807304d44c?reconnect=true
+spring.datasource.url=${protected.prod.datasource.url}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${protected.email.username}
+spring.mail.password=${protected.email.password}
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
