Implementando autenticação e geração do Token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.profiles.active=test
 default.sender=${protected.email}
 default.recipient=${protected.email}
 
+jwt.secret=${protected.jwt.secret}
+jwt.expiration=60000
+
 spring.application.name=myapp
 spring.config.import=secrets/myapp.properties
