--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,12 @@ default.sender=${protected.email}
 default.recipient=${protected.email}
 
 jwt.secret=${protected.jwt.secret}
-jwt.expiration=300000
+jwt.expiration=86400000
 
 spring.application.name=myapp
 spring.config.import=secrets/myapp.properties
+
+aws.access_key_id=${protected.aws.access_key_id}
+aws.secret_access_key=${protected.aws.secret_access_key}
+s3.bucket=curso-spring-ionic-dcrm
+s3.region=sa-east-1
