--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ aws.access_key_id=${protected.aws.access_key_id}
 aws.secret_access_key=${protected.aws.secret_access_key}
 s3.bucket=curso-spring-ionic-dcrm
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
