Melhoria: Enviando imagem de Categoria via endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,9 @@ s3.bucket=curso-spring-ionic-dcrm
 s3.region=sa-east-1
 
 img.prefix.client.profile=cp
-img.profile.size=300
+img.profile.size=200
+img.prefix.categoria=cat
+img.categoria.size=250
+img.prefix.produto=prod
+img.produto_small.size=200
+
