Adicionando variaveis de ambiente

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=${protected.prod.datasource.url}
+#spring.datasource.url=${protected.prod.datasource.url}
+spring.datasource.url=${CLEARDB_DATABASE_URL}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=${protected.email.username}
-spring.mail.password=${protected.email.password}
+spring.mail.username=${EMAIL_USERNAME:vazio}
+spring.mail.password=${EMAIL_PASSWORD:vazio}
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
