--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.profiles.active=prod
+spring.profiles.active=${APP_PROFILE:test}
 
-default.sender=${protected.email}
-default.recipient=${protected.email}
+default.sender=${EMAIL_SENDER:protected.email}
+default.recipient=${EMAIL_RECIPIENT:protected.email}
 
-jwt.secret=${protected.jwt.secret}
-jwt.expiration=86400000
+jwt.secret=${JWT_SECRET:protected.jwt.secret}
+jwt.expiration=${JWT_EXPIRATION:86400}
 
-spring.application.name=myapp
-spring.config.import=secrets/myapp.properties
-
-aws.access_key_id=${protected.aws.access_key_id}
-aws.secret_access_key=${protected.aws.secret_access_key}
+aws.access_key_id=${AWS_KEY:protected.aws.access_key_id}
+aws.secret_access_key=${AWS_SECRET:protected.aws.secret_access_key}
 s3.bucket=curso-spring-ionic-dcrm
 s3.region=sa-east-1
 
@@ -23,4 +20,5 @@ img.produto_small.size=200
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
 
