CORREÇÂO: Adicionado ProdConfig

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,4 @@
-#spring.datasource.url=${protected.prod.datasource.url}
-spring.datasource.url=${CLEARDB_DATABASE_URL}
+spring.datasource.url=${CLEARDB_DATABASE_URL:vazio}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
