CORREÇÂO: Corrigido application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
+spring.config.import=secrets/myapp.properties
+spring.application.name=myapp
+
 spring.profiles.active=${APP_PROFILE:test}
 
-default.sender=${EMAIL_SENDER:protected.email}
-default.recipient=${EMAIL_RECIPIENT:protected.email}
+default.sender=${EMAIL_SENDER}
+default.recipient=${EMAIL_RECIPIENT}
 
-jwt.secret=${JWT_SECRET:protected.jwt.secret}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:86400}
 
-aws.access_key_id=${AWS_KEY:protected.aws.access_key_id}
-aws.secret_access_key=${AWS_SECRET:protected.aws.secret_access_key}
+aws.access_key_id=${AWS_KEY}
+aws.secret_access_key=${AWS_SECRET}
 s3.bucket=curso-spring-ionic-dcrm
 s3.region=sa-east-1
 
@@ -20,5 +23,7 @@ img.produto_small.size=200
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
 
 
