--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ jwt.expiration=${JWT_EXPIRATION:86400}
 
 aws.access_key_id=${AWS_KEY}
 aws.secret_access_key=${AWS_SECRET}
-s3.bucket=curso-spring-ionic-dcrm
-s3.region=sa-east-1
+s3.bucket=${AWS_S3_BUCKET}
+s3.region=${AWS_S3_REGION}
 
 img.prefix.client.profile=cp
 img.profile.size=200
