CORREÇÂO: Atualizando configurações para produção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.config.import=secrets/myapp.properties
-spring.application.name=myapp
+#spring.config.import=secrets/myapp.properties
+#spring.application.name=myapp
 
 spring.profiles.active=${APP_PROFILE:test}
 
